# libmwaw

./: CHANGES  Makefile.in  README  TODO  autogen.sh  config.h.in  configure  configure.ac  libmwaw.spec
debian/: changelog  control  libmwaw-tools.install  rules  watch
docs/: Makefile.in
docs/doxygen/: Makefile.in  doxygen.cfg
inc/: Makefile.in
inc/libmwaw/: MWAWDocument.hxx  Makefile.in  libmwaw.hxx
src/: Makefile.am  Makefile.in
src/conv/: Makefile.am  Makefile.in
src/conv/csv/: Makefile.am  Makefile.in  mwaw2csv.cpp
src/conv/helper/: Makefile.am  Makefile.in  helper.cpp  helper.h
src/conv/html/: Makefile.am  Makefile.in  mwaw2html.cpp
src/conv/raw/: Makefile.am  Makefile.in  mwaw2raw.cpp
src/conv/svg/: Makefile.am  Makefile.in  mwaw2svg.cpp
src/conv/text/: Makefile.am  Makefile.in  mwaw2text.cpp
src/fuzz/: Makefile.am  Makefile.in  greatwksfuzzer.cpp  macpaintfuzzer.cpp  powerpointfuzzer.cpp  wingzfuzzer.cpp  writerplsfuzzer.cpp
src/lib/: ActaParser.cxx  ActaParser.hxx  ActaText.cxx  ActaText.hxx  ApplePictParser.cxx  ApplePictParser.hxx  BeagleWksBMParser.cxx  BeagleWksBMParser.hxx  BeagleWksDBParser.cxx  BeagleWksDBParser.hxx  BeagleWksDRParser.cxx  BeagleWksDRParser.hxx  BeagleWksParser.cxx  BeagleWksParser.hxx  BeagleWksSSParser.cxx  BeagleWksSSParser.hxx  BeagleWksStructManager.cxx  BeagleWksStructManager.hxx  BeagleWksText.cxx  BeagleWksText.hxx  Canvas5BMParser.cxx  Canvas5BMParser.hxx  Canvas5Graph.cxx  Canvas5Graph.hxx  Canvas5Image.cxx  Canvas5Image.hxx  Canvas5Parser.cxx  Canvas5Parser.hxx  Canvas5Structure.cxx  Canvas5Structure.hxx  Canvas5StyleManager.cxx  Canvas5StyleManager.hxx  CanvasGraph.cxx  CanvasGraph.hxx  CanvasParser.cxx  CanvasParser.hxx  CanvasStyleManager.cxx  CanvasStyleManager.hxx  ClarisDrawGraph.cxx  ClarisDrawGraph.hxx  (+333 more)
src/tools/: Makefile.in
src/tools/file/: Makefile.am  Makefile.in  file.cpp  input.cpp  input.h  ole.cpp  ole.h  rsrc.cpp  rsrc.h  xattr.cpp  xattr.h
src/tools/zip/: Makefile.am  Makefile.in  input.cpp  input.h  mwawZip.cpp  xattr.cpp  xattr.h  zip.cpp  zip.h  zip_internal.h
