if OS_WIN32
version_info = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) -avoid-version
else
version_info = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE)
endif

lib_LTLIBRARIES = libmwaw-@MWAW_MAJOR_VERSION@.@MWAW_MINOR_VERSION@.la $(target_libmwaw_stream)
libmwaw_@MWAW_MAJOR_VERSION@_@MWAW_MINOR_VERSION@_includedir = $(includedir)/libmwaw-@MWAW_MAJOR_VERSION@.@MWAW_MINOR_VERSION@/libmwaw
libmwaw_@MWAW_MAJOR_VERSION@_@MWAW_MINOR_VERSION@_include_HEADERS = \
	$(top_srcdir)/inc/libmwaw/libmwaw.hxx \
	$(top_srcdir)/inc/libmwaw/MWAWDocument.hxx

AM_CXXFLAGS = -I$(top_srcdir)/inc $(REVENGE_CFLAGS) $(DEBUG_CXXFLAGS) $(ZLIB_CFLAGS)
if WITH_LIBMWAW_ZIP
AM_CXXFLAGS += -DUSE_ZLIB
endif

libmwaw_@MWAW_MAJOR_VERSION@_@MWAW_MINOR_VERSION@_la_LIBADD  = $(REVENGE_LIBS) $(ZLIB_LIBS) @LIBMWAW_WIN32_RESOURCE@
libmwaw_@MWAW_MAJOR_VERSION@_@MWAW_MINOR_VERSION@_la_DEPENDENCIES = @LIBMWAW_WIN32_RESOURCE@  
libmwaw_@MWAW_MAJOR_VERSION@_@MWAW_MINOR_VERSION@_la_LDFLAGS = $(version_info) -export-dynamic  -no-undefined
libmwaw_@MWAW_MAJOR_VERSION@_@MWAW_MINOR_VERSION@_la_SOURCES = \
	libmwaw_internal.cxx		\
	libmwaw_internal.hxx		\
	ActaParser.cxx			\
	ActaParser.hxx			\
	ActaText.cxx			\
	ActaText.hxx			\
	ApplePictParser.cxx		\
	ApplePictParser.hxx		\
	BeagleWksParser.cxx		\
	BeagleWksParser.hxx		\
	BeagleWksBMParser.cxx		\
	BeagleWksBMParser.hxx		\
	BeagleWksDBParser.cxx		\
	BeagleWksDBParser.hxx		\
	BeagleWksDRParser.cxx		\
	BeagleWksDRParser.hxx		\
	BeagleWksSSParser.cxx		\
	BeagleWksSSParser.hxx		\
	BeagleWksStructManager.cxx	\
	BeagleWksStructManager.hxx	\
	BeagleWksText.cxx		\
	BeagleWksText.hxx		\
	CanvasGraph.cxx			\
	CanvasGraph.hxx			\
	CanvasParser.cxx		\
	CanvasParser.hxx		\
	CanvasStyleManager.cxx		\
	CanvasStyleManager.hxx		\
	Canvas5BMParser.cxx		\
	Canvas5BMParser.hxx		\
	Canvas5Graph.cxx		\
	Canvas5Graph.hxx		\
	Canvas5Image.cxx		\
	Canvas5Image.hxx		\
	Canvas5Parser.cxx		\
	Canvas5Parser.hxx		\
	Canvas5Structure.cxx		\
	Canvas5Structure.hxx		\
	Canvas5StyleManager.cxx		\
	Canvas5StyleManager.hxx		\
	ClarisDrawGraph.cxx		\
	ClarisDrawGraph.hxx		\
	ClarisDrawParser.cxx		\
	ClarisDrawParser.hxx		\
	ClarisDrawStyleManager.cxx	\
	ClarisDrawStyleManager.hxx	\
	ClarisDrawText.cxx		\
	ClarisDrawText.hxx		\
	ClarisWksBMParser.cxx		\
	ClarisWksBMParser.hxx		\
	ClarisWksDatabase.cxx		\
	ClarisWksDatabase.hxx		\
	ClarisWksDbaseContent.cxx	\
	ClarisWksDbaseContent.hxx	\
	ClarisWksDocument.cxx		\
	ClarisWksDocument.hxx		\
	ClarisWksGraph.cxx		\
	ClarisWksGraph.hxx		\
	ClarisWksParser.cxx		\
	ClarisWksParser.hxx		\
	ClarisWksPresentation.cxx	\
	ClarisWksPresentation.hxx	\
	ClarisWksPRParser.cxx		\
	ClarisWksPRParser.hxx		\
	ClarisWksSpreadsheet.cxx	\
	ClarisWksSpreadsheet.hxx	\
	ClarisWksSSParser.cxx		\
	ClarisWksSSParser.hxx		\
	ClarisWksStruct.cxx		\
	ClarisWksStruct.hxx		\
	ClarisWksStyleManager.cxx	\
	ClarisWksStyleManager.hxx	\
	ClarisWksTable.cxx		\
	ClarisWksTable.hxx		\
	ClarisWksText.cxx		\
	ClarisWksText.hxx		\
	CorelPainterParser.cxx		\
	CorelPainterParser.hxx		\
	CricketDrawParser.cxx		\
	CricketDrawParser.hxx		\
	DocMkrParser.cxx		\
	DocMkrParser.hxx		\
	DocMkrText.cxx			\
	DocMkrText.hxx			\
	DrawTableParser.cxx		\
	DrawTableParser.hxx		\
	EDocParser.cxx			\
	EDocParser.hxx			\
	FreeHandParser.cxx		\
	FreeHandParser.hxx		\
	FullWrtGraph.cxx		\
	FullWrtGraph.hxx		\
	FullWrtParser.cxx		\
	FullWrtParser.hxx		\
	FullWrtStruct.cxx		\
	FullWrtStruct.hxx		\
	FullWrtText.cxx			\
	FullWrtText.hxx			\
	GreatWksBMParser.cxx		\
	GreatWksBMParser.hxx		\
	GreatWksDBParser.cxx		\
	GreatWksDBParser.hxx		\
	GreatWksDocument.cxx		\
	GreatWksDocument.hxx		\
	GreatWksDRParser.cxx		\
	GreatWksDRParser.hxx		\
	GreatWksGraph.cxx		\
	GreatWksGraph.hxx		\
	GreatWksParser.cxx		\
	GreatWksParser.hxx		\
	GreatWksSSParser.cxx		\
	GreatWksSSParser.hxx		\
	GreatWksText.cxx		\
	GreatWksText.hxx		\
	HanMacWrdJGraph.cxx		\
	HanMacWrdJGraph.hxx		\
	HanMacWrdJParser.cxx		\
	HanMacWrdJParser.hxx		\
	HanMacWrdJText.cxx		\
	HanMacWrdJText.hxx		\
	HanMacWrdKGraph.cxx		\
	HanMacWrdKGraph.hxx		\
	HanMacWrdKParser.cxx		\
	HanMacWrdKParser.hxx		\
	HanMacWrdKText.cxx		\
	HanMacWrdKText.hxx		\
	JazzSSParser.cxx		\
	JazzSSParser.hxx		\
	JazzWriterParser.cxx		\
	JazzWriterParser.hxx		\
	LightWayTxtGraph.cxx		\
	LightWayTxtGraph.hxx		\
	LightWayTxtParser.cxx		\
	LightWayTxtParser.hxx		\
	LightWayTxtText.cxx		\
	LightWayTxtText.hxx		\
	MacDocParser.cxx		\
	MacDocParser.hxx		\
	MacDraftParser.cxx		\
	MacDraftParser.hxx		\
	MacDraft5Parser.cxx		\
	MacDraft5Parser.hxx		\
	MacDraft5StyleManager.cxx	\
	MacDraft5StyleManager.hxx	\
	MacDrawParser.cxx		\
	MacDrawParser.hxx		\
	MacDrawProParser.cxx		\
	MacDrawProParser.hxx		\
	MacDrawProStyleManager.cxx	\
	MacDrawProStyleManager.hxx	\
	MacPaintParser.cxx		\
	MacPaintParser.hxx		\
	MacWrtParser.cxx		\
	MacWrtParser.hxx		\
	MacWrtProParser.cxx		\
	MacWrtProParser.hxx		\
	MacWrtProStructures.cxx		\
	MacWrtProStructures.hxx		\
	MarinerWrtGraph.cxx		\
	MarinerWrtGraph.hxx		\
	MarinerWrtParser.cxx		\
	MarinerWrtParser.hxx		\
	MarinerWrtText.cxx		\
	MarinerWrtText.hxx		\
	MaxWrtParser.cxx		\
	MaxWrtParser.hxx		\
	MindWrtParser.cxx		\
	MindWrtParser.hxx		\
	MoreParser.cxx			\
	MoreParser.hxx			\
	MoreText.cxx			\
	MoreText.hxx			\
	MouseWrtParser.cxx		\
	MouseWrtParser.hxx		\
	MsWksDocument.cxx		\
	MsWksDocument.hxx		\
	MsWksDBParser.cxx		\
	MsWksDBParser.hxx		\
	MsWksDRParser.cxx		\
	MsWksDRParser.hxx		\
	MsWksGraph.cxx			\
	MsWksGraph.hxx			\
	MsWksParser.cxx			\
	MsWksParser.hxx			\
	MsWksSSParser.cxx		\
	MsWksSSParser.hxx		\
	MsWksTable.cxx			\
	MsWksTable.hxx			\
	MsWks3Text.cxx			\
	MsWks3Text.hxx			\
	MsWks4Text.cxx			\
	MsWks4Text.hxx			\
	MsWks4Zone.cxx			\
	MsWks4Zone.hxx			\
	MsWrd1Parser.cxx		\
	MsWrd1Parser.hxx		\
	MsWrdParser.cxx			\
	MsWrdParser.hxx			\
	MsWrdStruct.cxx			\
	MsWrdStruct.hxx			\
	MsWrdText.cxx			\
	MsWrdText.hxx			\
	MsWrdTextStyles.cxx		\
	MsWrdTextStyles.hxx		\
	MultiplanParser.cxx		\
	MultiplanParser.hxx		\
	MWAWCell.cxx			\
	MWAWCell.hxx			\
	MWAWChart.cxx			\
	MWAWChart.hxx			\
	MWAWDebug.cxx			\
	MWAWDebug.hxx			\
	MWAWDocument.cxx		\
	MWAWEntry.cxx			\
	MWAWEntry.hxx			\
	MWAWFont.cxx			\
	MWAWFont.hxx			\
	MWAWFontConverter.cxx		\
	MWAWFontConverter.hxx		\
	MWAWFontSJISConverter.cxx	\
	MWAWFontSJISConverter.hxx	\
	MWAWGraphicDecoder.cxx		\
	MWAWGraphicDecoder.hxx		\
	MWAWGraphicEncoder.cxx		\
	MWAWGraphicEncoder.hxx		\
	MWAWGraphicListener.cxx		\
	MWAWGraphicListener.hxx		\
	MWAWGraphicShape.cxx		\
	MWAWGraphicShape.hxx		\
	MWAWGraphicStyle.cxx		\
	MWAWGraphicStyle.hxx		\
	MWAWHeader.cxx			\
	MWAWHeader.hxx			\
	MWAWInputStream.cxx		\
	MWAWInputStream.hxx		\
	MWAWList.cxx			\
	MWAWList.hxx			\
	MWAWListener.cxx		\
	MWAWListener.hxx		\
	MWAWOLEParser.cxx		\
	MWAWOLEParser.hxx		\
	MWAWPageSpan.cxx		\
	MWAWPageSpan.hxx		\
	MWAWParagraph.cxx		\
	MWAWParagraph.hxx		\
	MWAWParser.cxx			\
	MWAWParser.hxx			\
	MWAWPict.cxx			\
	MWAWPict.hxx			\
	MWAWPictBitmap.cxx		\
	MWAWPictBitmap.hxx		\
	MWAWPictData.cxx		\
	MWAWPictData.hxx		\
	MWAWPictMac.cxx			\
	MWAWPictMac.hxx			\
	MWAWPosition.cxx		\
	MWAWPosition.hxx		\
	MWAWPresentationListener.cxx	\
	MWAWPresentationListener.hxx	\
	MWAWPrinter.cxx			\
	MWAWPrinter.hxx			\
	MWAWPropertyHandler.cxx		\
	MWAWPropertyHandler.hxx		\
	MWAWRSRCParser.cxx		\
	MWAWRSRCParser.hxx		\
	MWAWSection.cxx			\
	MWAWSection.hxx			\
	MWAWSpreadsheetDecoder.cxx	\
	MWAWSpreadsheetDecoder.hxx	\
	MWAWSpreadsheetEncoder.cxx	\
	MWAWSpreadsheetEncoder.hxx	\
	MWAWSpreadsheetListener.cxx	\
	MWAWSpreadsheetListener.hxx	\
	MWAWStream.cxx			\
	MWAWStream.hxx			\
	MWAWStringStream.cxx		\
	MWAWStringStream.hxx		\
	MWAWSubDocument.cxx		\
	MWAWSubDocument.hxx		\
	MWAWTable.cxx			\
	MWAWTable.hxx			\
	MWAWTextListener.cxx		\
	MWAWTextListener.hxx		\
	NisusWrtGraph.cxx		\
	NisusWrtGraph.hxx		\
	NisusWrtParser.cxx		\
	NisusWrtParser.hxx		\
	NisusWrtStruct.cxx		\
	NisusWrtStruct.hxx		\
	NisusWrtText.cxx		\
	NisusWrtText.hxx		\
	PixelPaintParser.cxx		\
	PixelPaintParser.hxx		\
	PowerPoint1Parser.cxx		\
	PowerPoint1Parser.hxx		\
	PowerPoint3OLE.cxx		\
	PowerPoint3OLE.hxx		\
	PowerPoint3Parser.cxx		\
	PowerPoint3Parser.hxx		\
	PowerPoint7Graph.cxx		\
	PowerPoint7Graph.hxx		\
	PowerPoint7Parser.cxx		\
	PowerPoint7Parser.hxx		\
	PowerPoint7Struct.cxx		\
	PowerPoint7Struct.hxx		\
	PowerPoint7Text.cxx		\
	PowerPoint7Text.hxx		\
	RagTimeParser.cxx		\
	RagTimeParser.hxx		\
	RagTimeSpreadsheet.cxx		\
	RagTimeSpreadsheet.hxx		\
	RagTimeStruct.cxx		\
	RagTimeStruct.hxx		\
	RagTimeText.cxx			\
	RagTimeText.hxx			\
	RagTime5Chart.cxx		\
	RagTime5Chart.hxx		\
	RagTime5ClusterManager.cxx	\
	RagTime5ClusterManager.hxx	\
	RagTime5Document.cxx		\
	RagTime5Document.hxx		\
	RagTime5Formula.cxx		\
	RagTime5Formula.hxx		\
	RagTime5Graph.cxx		\
	RagTime5Graph.hxx		\
	RagTime5Layout.cxx		\
	RagTime5Layout.hxx		\
	RagTime5Parser.cxx		\
	RagTime5Parser.hxx		\
	RagTime5Pipeline.cxx		\
	RagTime5Pipeline.hxx		\
	RagTime5Spreadsheet.cxx		\
	RagTime5Spreadsheet.hxx		\
	RagTime5StructManager.cxx	\
	RagTime5StructManager.hxx	\
	RagTime5StyleManager.cxx	\
	RagTime5StyleManager.hxx	\
	RagTime5SSParser.cxx		\
	RagTime5SSParser.hxx		\
	RagTime5Text.cxx		\
	RagTime5Text.hxx		\
	ReadySetGoParser.cxx		\
	ReadySetGoParser.hxx		\
	ScoopParser.cxx			\
	ScoopParser.hxx			\
	ScriptWriterParser.cxx		\
	ScriptWriterParser.hxx		\
	StudentWritingCParser.cxx	\
	StudentWritingCParser.hxx	\
	StyleParser.cxx			\
	StyleParser.hxx			\
	SuperPaintParser.cxx		\
	SuperPaintParser.hxx		\
	TeachTxtParser.cxx		\
	TeachTxtParser.hxx		\
	WingzGraph.cxx			\
	WingzGraph.hxx			\
	WingzParser.cxx			\
	WingzParser.hxx			\
	WordMakerParser.cxx		\
	WordMakerParser.hxx		\
	WriteNowEntry.cxx		\
	WriteNowEntry.hxx		\
	WriteNowParser.cxx		\
	WriteNowParser.hxx		\
	WriteNowText.cxx		\
	WriteNowText.hxx		\
	WriterPlsParser.cxx		\
	WriterPlsParser.hxx		\
	ZWrtParser.cxx			\
	ZWrtParser.hxx			\
	ZWrtText.cxx			\
	ZWrtText.hxx

if OS_WIN32

@LIBMWAW_WIN32_RESOURCE@ : libmwaw.rc $(libmwaw_@MWAW_MAJOR_VERSION@_@MWAW_MINOR_VERSION@_la_OBJECTS)
	chmod +x $(top_srcdir)/build/win32/*compile-resource
	WINDRES=@WINDRES@ $(top_srcdir)/build/win32/lt-compile-resource libmwaw.rc @LIBMWAW_WIN32_RESOURCE@

endif

EXTRA_DIST = \
	libmwaw.rc.in

# These may be in the builddir too
BUILD_EXTRA_DIST = \
	libmwaw.rc
